centering the elements, and change icon size

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
     <div class="wrapper">
       <div class="contact__box">
         <h2 class="section-heading">kontakt</h2>
-        <p>W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
+        <p class="text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
         <ol>
           <li>
             <h3 class="tittle">Aleksandra</h3>
@@ -76,52 +76,58 @@
 
   <section id="QandA" class="info section-padding section">
     <div class="wrapper">
-      <div class="info__box">
-        <h2 class="section-heading">Q&A</h2>
+      <h2 class="section-heading">Q&A</h2>
+      <div class="info__box--list">
         <ol>
           <li>
-            <img class="icons" src="./img/icons/federal-palace-of-switzerland.png">
+            <img class="info__box--icons" src="./img/icons/federal-palace-of-switzerland.png">
             <h3 class="tittle">Gdzie odbędzie się ceremonia zaślubin?</h3>
-            <p>Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga.</p>
+            <p class="text">Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga.</p>
           </li>
-          <li>
-            <img class="icons" src="./img/icons/tracking.png">
+          <li class="info__box--list">
+            <img class="info__box--icons" src="./img/icons/tracking.png">
             <h3 class="tittle">Jak dojechać do sali?</h3>
-            <p>Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" -
+            <p class="text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa
+              Holandia" -
               bez trudu dojedziecie na miejsce :)</p>
           </li>
-          <li>
-            <img class="icons" src="./img/icons/parking.png">
+          <li class="info__box--list">
+            <img class="info__box--icons" src="./img/icons/parking.png">
             <h3 class="tittle">Czy przy sali dostępny jest parking?</h3>
-            <p>Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
+            <p class="text">Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking
+              samochodowy.</p>
           </li>
-          <li>
-            <img class="icons" src="./img/icons/rainy.png">
+          <li class="info__box--list">
+            <img class="info__box--icons" src="./img/icons/rainy.png">
             <h3 class="tittle">Co jeżeli będzie padać?</h3>
-            <p>Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby
+            <p class="text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie
+              potrzeby
               ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz
               restauracji - bez względu na pogodę.</p>
           </li>
-          <li>
-            <img class="icons" src="./img/icons/baby-boy.png">
+          <li class="info__box--list">
+            <img class="info__box--icons" src="./img/icons/baby-boy.png">
             <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
-            <p>Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie
+            <p class="text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną
+              porę) nie
               będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż.
               Mamy nadzieję, że rozumiecie naszą decyzję.</p>
           </li>
-          <li>
-            <img class="icons" src="./img/icons/salad.png">
+          <li class="info__box--list">
+            <img class="info__box--icons" src="./img/icons/salad.png">
             <h3 class="tittle">Co jeśli nie jem mięsa?</h3>
-            <p>Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach
+            <p class="text">Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich
+              preferencjach
               przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą
               dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień,
               gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma
               możliwości ich zmiany.</p>
           </li>
-          <li>
-            <img class="icons" src="./img/icons/taxi.png">
+          <li class="info__box--list">
+            <img class="info__box--icons" src="./img/icons/taxi.png">
             <h3 class="tittle">Jak po weselu wrócić do domu/hotelu?</h3>
-            <p>Najkorzystniej będzie zamówić taksówkę z TeleTaxi (tel. 55 233 24 44). Sala, w której odbędzie się wesele
+            <p class="text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi (tel. 55 233 24 44). Sala, w której
+              odbędzie się wesele
               ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być
               niższa niż u pozostałych firm taksówkarskich.</p>
           </li>
@@ -146,7 +152,7 @@
     <div class="wrapper">
       <h2 class="section-heading">plan wesela</h2>
       <div class="info__box">
-        <p>w tym miejscu będzie plan wesela :)</p>
+        <p class="text">w tym miejscu będzie plan wesela :)</p>
       </div>
     </div>
   </section>
@@ -155,7 +161,7 @@
     <div class="wrapper">
       <h2 class="section-heading">menu weselne</h2>
       <div class="info__box">
-        <p>w tym miejscu będzie menu weselne :)</p>
+        <p class="text">w tym miejscu będzie menu weselne :)</p>
       </div>
     </div>
   </section>
@@ -164,7 +170,7 @@
     <div class="wrapper">
       <h2 class="section-heading">zdjęcia</h2>
       <div class="info__box">
-        <p>w tym miejscu będą zdjęcia :)</p>
+        <p class="text">w tym miejscu będą zdjęcia :)</p>
       </div>
     </div>
 
