--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,32 @@
     </div>
   </button>
 
+  <div class="counter__app">
+    <div class="counter__app__body">
+        <div class="time__section">
+          <h3 class="time__section--title">Ślub za:</h3>
+          <div class="time__section__cards">
+                <div class="card">
+                    <p class="days__count number">1</p>
+                    <p class="card__title">Dni</p>
+                </div>
+                <div class="card">
+                    <p class="hours__count number">23</p>
+                    <p class="card__title">Godzin</p>
+                </div>
+                <div class="card">
+                    <p class="minutes__count number">48</p>
+                    <p class="card__title">Minut</p>
+                </div>
+                <div class="card">
+                    <p class="seconds__count number">35</p>
+                    <p class="card__title">Sekund</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
   <nav class="nav nav-mobile">
     <div class="nav__items">
       <a href="#home" class="nav__item">Strona główna</a>
