change class for section:plan, menu, photos

--- a/src/index.html
+++ b/src/index.html
@@ -53,9 +53,9 @@
   <nav class="nav nav-mobile">
     <div class="nav__items">
       <a href="#home" class="nav__item">Strona główna</a>
+      <a href="#QandA" class="nav__item">Q&A</a>
       <a href="#weddingPlan" class="nav__item">Plan ślubu i wesela</a>
       <a href="#weddingMenu" class="nav__item">Menu</a>
-      <a href="#QandA" class="nav__item">Q&A</a>
       <a href="#weddingPhotos" class="nav__item">Zdjęcia i filmy</a>
     </div>
   </nav>
@@ -63,9 +63,9 @@
   <nav class="nav nav-desktop">
     <div class="nav__items">
       <a href="#home" class="nav__item">Strona główna</a>
+      <a href="#QandA" class="nav__item">Q&A</a>
       <a href="#weddingPlan" class="nav__item">Plan ślubu i Wesela</a>
       <a href="#weddingMenu" class="nav__item">Menu</a>
-      <a href="#QandA" class="nav__item">Q&A</a>
       <a href="#weddingPhotos" class="nav__item">Zdjęcia i filmy</a>
     </div>
   </nav>
@@ -170,28 +170,28 @@
     </div>
   </section>
 
-  <section id="weddingPlan" class="info section-padding section">
+  <section id="weddingPlan" class="plan section-padding section">
     <div class="wrapper">
       <h2 class="section-heading">plan wesela</h2>
-      <div class="info__box">
+      <div class="plan__box">
         <p class="text">w tym miejscu będzie plan wesela :)</p>
       </div>
     </div>
   </section>
 
-  <section id="weddingMenu" class="info section-padding section">
+  <section id="weddingMenu" class="menu section-padding section">
     <div class="wrapper">
       <h2 class="section-heading">menu weselne</h2>
-      <div class="info__box">
+      <div class="menu__box">
         <p class="text">w tym miejscu będzie menu weselne :)</p>
       </div>
     </div>
   </section>
 
-  <section id="weddingPhotos" class="info section-padding section">
+  <section id="weddingPhotos" class="photos section-padding section">
     <div class="wrapper">
       <h2 class="section-heading">zdjęcia</h2>
-      <div class="info__box">
+      <div class="photos__box">
         <p class="text">w tym miejscu będą zdjęcia :)</p>
       </div>
     </div>
