--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,32 @@
 
 <body>
 
+
+
+
   <header id="home" class="header section">
     <h1 class="header__heading">Ślub Aleksandry i Patryka</h1>
+    <div class="header__timer">
+      <div class="header__timer__body">
+        <div class="time__section">
+          <h3 class="time__section--title">Ślub za:</h3>
+          <div class="time__section__cards">
+            <div class="card">
+              <p class="days__count number"></p>
+              <p class="card__title">Dni</p>
+            </div>
+            <div class="card">
+              <p class="hours__count number"></p>
+              <p class="card__title">Godzin</p>
+            </div>
+            <div class="card">
+              <p class="minutes__count number"></p>
+              <p class="card__title">Minut</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
   <button class="burger-btn">
@@ -28,75 +52,29 @@
     </div>
   </button>
 
-  <div class="timer">
-    <div class="timer__body">
-      <div class="time__section">
-        <h3 class="time__section--title">Ślub za:</h3>
-        <div class="time__section__cards">
-          <div class="card">
-            <p class="days__count number"></p>
-            <p class="card__title">Dni</p>
-          </div>
-          <div class="card">
-            <p class="hours__count number"></p>
-            <p class="card__title">Godzin</p>
-          </div>
-          <div class="card">
-            <p class="minutes__count number"></p>
-            <p class="card__title">Minut</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <nav class="nav nav-mobile">
     <div class="nav__items">
-      <a href="#home" class="nav__item">Strona główna</a>
-      <a href="#QandA" class="nav__item">Q&A</a>
-      <a href="#weddingPlan" class="nav__item">Plan ślubu i wesela</a>
-      <a href="#weddingMenu" class="nav__item">Menu</a>
-      <a href="#weddingPhotos" class="nav__item">Zdjęcia i filmy</a>
+      <a href="#home" class="nav__item homeBtn">Strona główna</a>
+      <a href="#QandA" class="nav__item QandABtn">Q&A</a>
+      <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i wesela</a>
+      <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
+      <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
     </div>
   </nav>
 
   <nav class="nav nav-desktop">
     <div class="nav__items">
-      <a href="#home" class="nav__item">Strona główna</a>
-      <a href="#QandA" class="nav__item">Q&A</a>
-      <a href="#weddingPlan" class="nav__item">Plan ślubu i Wesela</a>
-      <a href="#weddingMenu" class="nav__item">Menu</a>
-      <a href="#weddingPhotos" class="nav__item">Zdjęcia i filmy</a>
+      <a href="#home" class="nav__item homeBtn">Strona główna</a>
+      <a href="#QandA" class="nav__item QandABtn">Q&A</a>
+      <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i Wesela</a>
+      <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
+      <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
     </div>
   </nav>
 
-  <section id="contactToUs" class="contact section-padding section">
-    <div class="wrapper">
-      <div class="contact__box">
-        <h2 class="section-heading">kontakt</h2>
-        <p class="text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
-        <ol>
-          <li>
-            <h3 class="tittle">Aleksandra</h3>
-          </li>
-          <li>
-            <h3 class="tittle">Patryk</h3>
-          </li>
-          <li>
-            <h3 class="tittle">Klaudia - świadkowa</h3>
-          </li>
-          <li>
-            <h3 class="tittle">Mariusz - świadek</h3>
-          </li>
-          <!-- <li>
-            <h3 class="tittle">Basia - wsparcie</h3>
-          </li> -->
-        </ol>
-      </div>
-    </div>
-  </section>
+  
 
-  <section id="QandA" class="info section-padding section">
+  <section id="QandA" class="info section-padding section info--disable">
     <div class="wrapper">
       <h2 class="section-heading">Q&A</h2>
       <div class="info__box--list">
@@ -159,7 +137,33 @@
     </div>
   </section>
 
-  <section id="placeWithMap" class="map section-padding section">
+  <section id="contactToUs" class="contact section-padding section contact--disable">
+    <div class="wrapper">
+      <div class="contact__box">
+        <h2 class="section-heading">kontakt</h2>
+        <p class="text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
+        <ol>
+          <li>
+            <h3 class="tittle">Aleksandra</h3>
+          </li>
+          <li>
+            <h3 class="tittle">Patryk</h3>
+          </li>
+          <li>
+            <h3 class="tittle">Klaudia - świadkowa</h3>
+          </li>
+          <li>
+            <h3 class="tittle">Mariusz - świadek</h3>
+          </li>
+          <!-- <li>
+            <h3 class="tittle">Basia - wsparcie</h3>
+          </li> -->
+        </ol>
+      </div>
+    </div>
+  </section>
+
+  <section id="placeWithMap" class="map section-padding section map--disable">
     <div class="wrapper">
       <h2 class="section-heading">mapa</h2>
       <div class="map__box">
@@ -170,7 +174,7 @@
     </div>
   </section>
 
-  <section id="weddingPlan" class="plan section-padding section">
+  <section id="weddingPlan" class="plan section-padding section plan--disable">
     <div class="wrapper">
       <h2 class="section-heading">plan wesela</h2>
       <div class="plan__box">
@@ -179,7 +183,7 @@
     </div>
   </section>
 
-  <section id="weddingMenu" class="menu section-padding section">
+  <section id="weddingMenu" class="menu section-padding section menu--disable">
     <div class="wrapper">
       <h2 class="section-heading">menu weselne</h2>
       <div class="menu__box">
@@ -188,7 +192,7 @@
     </div>
   </section>
 
-  <section id="weddingPhotos" class="photos section-padding section">
+  <section id="weddingPhotos" class="photos section-padding section photos--disable">
     <div class="wrapper">
       <h2 class="section-heading">zdjęcia</h2>
       <div class="photos__box">
