few small changes

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
     <div class="header__timer">
       <div class="header__timer__body">
         <div class="time__section">
-          <h3 class="time__section--title">Ślub za:</h3>
+          <h3 class="time__section--title">za:</h3>
           <div class="time__section__cards">
             <div class="card">
               <p class="days__count number"></p>
