change baby boy icon

--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
               restauracji - bez względu na pogodę.</p>
           </li>
           <li class="info__box--list">
-            <img class="info__box--icons" src="./img/icons/baby-boy.png">
+            <img class="info__box--icons" src="./img/icons/rocking-horse.png">
             <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
             <p class="text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną
               porę) nie
