--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
 
   <header id="home" class="header section">
-    <h1 class="header__heading">Ślub Aleksandry i Patryka</h1>
+    <h1 class="header__heading">Pobieramy się!</h1>
     <div class="header__timer">
       <div class="header__timer__body">
         <div class="time__section">
@@ -30,15 +30,15 @@
           <div class="time__section__cards">
             <div class="card">
               <p class="days__count number"></p>
-              <p class="card__title">Dni</p>
+              <p class="card__title">dni</p>
             </div>
             <div class="card">
               <p class="hours__count number"></p>
-              <p class="card__title">Godzin</p>
+              <p class="card__title">godzin</p>
             </div>
             <div class="card">
               <p class="minutes__count number"></p>
-              <p class="card__title">Minut</p>
+              <p class="card__title">minut</p>
             </div>
           </div>
         </div>
@@ -150,13 +150,14 @@
             <h3 class="tittle">Patryk</h3>
           </li>
           <li>
-            <h3 class="tittle">Klaudia - świadkowa</h3>
+            <h3 class="tittle">Klaudia Ciepłucha - świadkowa</h3>
+            <!-- <h3 class="tittle">Klaudia Lewandowska - świadkowa</h3> -->
           </li>
           <li>
-            <h3 class="tittle">Mariusz - świadek</h3>
+            <h3 class="tittle">Mariusz Wiśniewski - świadek</h3>
           </li>
           <!-- <li>
-            <h3 class="tittle">Basia - wsparcie</h3>
+            <h3 class="tittle">Basia Tomczyk- wsparcie</h3>
           </li> -->
         </ol>
       </div>
