--- a/src/index.html
+++ b/src/index.html
@@ -151,7 +151,7 @@
           </li>
           <li>
             <h3 class="tittle">Klaudia Ciepłucha - świadkowa</h3>
-            <!-- <h3 class="tittle">Klaudia Lewandowska - świadkowa</h3> -->
+            <!-- <h3 class="tittle">Klaudia Lewandowska - świadkowa</h3> w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
             <h3 class="tittle">Mariusz Wiśniewski - świadek</h3>
