--- a/src/index.html
+++ b/src/index.html
@@ -72,7 +72,7 @@
     </div>
   </nav>
 
-  
+
 
   <section id="QandA" class="info section-padding section info--disable">
     <div class="wrapper">
@@ -88,8 +88,7 @@
             <img class="info__box--icons" src="./img/icons/tracking.png">
             <h3 class="tittle">Jak dojechać do sali?</h3>
             <p class="text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa
-              Holandia" -
-              bez trudu dojedziecie na miejsce :)</p>
+              Holandia" - bez trudu dojedziecie na miejsce :)</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/parking.png">
@@ -101,8 +100,7 @@
             <img class="info__box--icons" src="./img/icons/rainy.png">
             <h3 class="tittle">Co jeżeli będzie padać?</h3>
             <p class="text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie
-              potrzeby
-              ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz
+              potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz
               restauracji - bez względu na pogodę.</p>
           </li>
           <li class="info__box--list">
