add Kontakt and Mapa navigation, and little change JS

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
       <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
       <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
+      <a href="#contact" class="nav__item contactBtn">Kontakt</a>
+      <a href="#map" class="nav__item mapBtn">Mapa</a>
     </div>
   </nav>
 
@@ -69,6 +71,8 @@
       <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i Wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
       <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
+      <a href="#contact" class="nav__item contactBtn">Kontakt</a>
+      <a href="#map" class="nav__item mapBtn">Mapa</a>
     </div>
   </nav>
 
