--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,8 @@
       <a href="#QandA" class="nav__item QandABtn">Q&A</a>
       <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
+      <a href="#placeWithMap" class="nav__item mapBtn">Mapa</a>
+      <a href="#contactToUs" class="nav__item contactBtn">kontakt</a>
       <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
     </div>
   </nav>
@@ -68,6 +70,8 @@
       <a href="#QandA" class="nav__item QandABtn">Q&A</a>
       <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i Wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
+      <a href="#placeWithMap" class="nav__item mapBtn">Mapa</a>
+      <a href="#contactToUs" class="nav__item contactBtn">kontakt</a>
       <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
     </div>
   </nav>
