--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
       <a href="#placeWithMap" class="nav__item mapBtn">Mapa</a>
-      <a href="#contactToUs" class="nav__item contactBtn">kontakt</a>
+      <a href="#contactToUs" class="nav__item contactBtn">Kontakt</a>
       <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
     </div>
   </nav>
@@ -71,7 +71,7 @@
       <a href="#weddingPlan" class="nav__item planBtn">Plan ślubu i Wesela</a>
       <a href="#weddingMenu" class="nav__item menuBtn">Menu</a>
       <a href="#placeWithMap" class="nav__item mapBtn">Mapa</a>
-      <a href="#contactToUs" class="nav__item contactBtn">kontakt</a>
+      <a href="#contactToUs" class="nav__item contactBtn">Kontakt</a>
       <a href="#weddingPhotos" class="nav__item photosBtn">Zdjęcia i filmy</a>
     </div>
   </nav>
