do few small changes

--- a/index.html
+++ b/index.html
@@ -146,17 +146,17 @@
         <p class="text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
         <ol>
           <li>
-            <h3 class="tittle">Aleksandra</h3>
+            <h3 class="tittle">Aleksandra <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3> 
           </li>
           <li>
-            <h3 class="tittle">Patryk</h3>
+            <h3 class="tittle">Patryk <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <li>
-            <h3 class="tittle">Klaudia Ciepłucha - świadkowa</h3>
+            <h3 class="tittle">Klaudia Ciepłucha - świadkowa <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
             <!-- <h3 class="tittle">Klaudia Lewandowska - świadkowa</h3> w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
-            <h3 class="tittle">Mariusz Wiśniewski - świadek</h3>
+            <h3 class="tittle">Mariusz Wiśniewski - świadek <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <!-- <li>
             <h3 class="tittle">Basia Tomczyk- wsparcie</h3>
