add 999 number to days, hours and mnutes count

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
           <h3 class="time__section--title">za:</h3>
           <div class="time__section__cards">
             <div class="card">
-              <p class="days__count number"></p>
+              <p id="days__count" class="days__count number">999</p>
               <p class="card__title">dni</p>
             </div>
             <div class="card">
-              <p class="hours__count number"></p>
+              <p id="hours__count" class="hours__count number">999</p>
               <p class="card__title">godzin</p>
             </div>
             <div class="card">
-              <p class="minutes__count number"></p>
+              <p id="minutes__count" class="minutes__count number">999</p>
               <p class="card__title">minut</p>
             </div>
           </div>
@@ -146,17 +146,21 @@
         <p class="text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
         <ol>
           <li>
-            <h3 class="tittle">Aleksandra <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3> 
+            <h3 class="tittle">Aleksandra <a href="#"><img class="contact__box--icons"
+                  src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <li>
-            <h3 class="tittle">Patryk <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <h3 class="tittle">Patryk <a href="#"><img class="contact__box--icons"
+                  src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <li>
-            <h3 class="tittle">Klaudia Ciepłucha - świadkowa <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <h3 class="tittle">Klaudia Ciepłucha - świadkowa <a href="#"><img class="contact__box--icons"
+                  src="./img/icons/messager-removebg-preview.png"></a></h3>
             <!-- <h3 class="tittle">Klaudia Lewandowska - świadkowa</h3> w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
-            <h3 class="tittle">Mariusz Wiśniewski - świadek <a href="#"><img class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <h3 class="tittle">Mariusz Wiśniewski - świadek <a href="#"><img class="contact__box--icons"
+                  src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <!-- <li>
             <h3 class="tittle">Basia Tomczyk- wsparcie</h3>
