--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
           <h3 class="time__section--title">za:</h3>
           <div class="time__section__cards">
             <div class="card">
-              <p class="days__count number">999</p>
+              <p id="days__count" class="days__count number"></p>
               <p class="card__title">dni</p>
             </div>
             <div class="card">
-              <p class="hours__count number">999</p>
+              <p id="hours__count" class="hours__count number"></p>
               <p class="card__title">godzin</p>
             </div>
             <div class="card">
-              <p class="minutes__count number">999</p>
+              <p id="minutes__count" class="minutes__count number"></p>
               <p class="card__title">minut</p>
             </div>
           </div>
