--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <link rel="stylesheet" href="css/main.css" />
 </head>
-
+<!-- TODO: nagłówki menu w kolorze burger buttona, -->
 <body>
 
 
@@ -91,47 +91,32 @@
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/tracking.png">
             <h3 class="tittle">Jak dojechać do sali?</h3>
-            <p class="text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa
-              Holandia" - bez trudu dojedziecie na miejsce :)</p>
+            <p class="text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" - bez trudu dojedziecie na miejsce :)</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/parking.png">
             <h3 class="tittle">Czy przy sali dostępny jest parking?</h3>
-            <p class="text">Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking
-              samochodowy.</p>
+            <p class="text">Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/rainy.png">
             <h3 class="tittle">Co jeżeli będzie padać?</h3>
-            <p class="text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie
-              potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz
-              restauracji - bez względu na pogodę.</p>
+            <p class="text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz restauracji - bez względu na pogodę.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/rocking-horse.png">
             <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
-            <p class="text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną
-              porę) nie
-              będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż.
-              Mamy nadzieję, że rozumiecie naszą decyzję.</p>
+            <p class="text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż. Mamy nadzieję, że rozumiecie naszą decyzję.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/salad.png">
             <h3 class="tittle">Co jeśli nie jem mięsa?</h3>
-            <p class="text">Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich
-              preferencjach
-              przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą
-              dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień,
-              gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma
-              możliwości ich zmiany.</p>
+            <p class="text">Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień, gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma możliwości ich zmiany.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/taxi.png">
             <h3 class="tittle">Jak po weselu wrócić do domu/hotelu?</h3>
-            <p class="text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi (tel. 55 233 24 44). Sala, w której
-              odbędzie się wesele
-              ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być
-              niższa niż u pozostałych firm taksówkarskich.</p>
+            <p class="text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi (tel. 55 233 24 44). Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
           </li>
         </ol>
       </div>
@@ -154,17 +139,14 @@
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <li>
-            <h3 class="tittle">Klaudia Ciepłucha - świadkowa <a href="#"><img class="contact__box--icons"
+            <h3 class="tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img class="contact__box--icons"
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
-            <!-- <h3 class="tittle">Klaudia Lewandowska - świadkowa</h3> w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
+            <!-- Klaudia Lewandowska - świadkowa-  w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
-            <h3 class="tittle">Mariusz Wiśniewski - świadek <a href="#"><img class="contact__box--icons"
+            <h3 class="tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img class="contact__box--icons"
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
-          <!-- <li>
-            <h3 class="tittle">Basia Tomczyk- wsparcie</h3>
-          </li> -->
         </ol>
       </div>
     </div>
