--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
           <h3 class="time__section--title">za:</h3>
           <div class="time__section__cards">
             <div class="card">
-              <p class="days number"></p>
+              <p class="days number">99</p>
               <p class="card__title">dni</p>
             </div>
             <div class="card">
-              <p class="hours number"></p>
+              <p class="hours number">99</p>
               <p class="card__title">godzin</p>
             </div>
             <div class="card">
-              <p class="minutes number"></p>
+              <p class="minutes number">99</p>
               <p class="card__title">minut</p>
             </div>
           </div>
