corrections in css and html with classes

--- a/index.html
+++ b/index.html
@@ -81,38 +81,38 @@
         <ol>
           <li>
             <img class="info__box--icons" src="./img/icons/federal-palace-of-switzerland.png">
-            <h3 class="tittle">Gdzie odbędzie się ceremonia zaślubin?</h3>
-            <p class="text">Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga.</p>
+            <h3 class="info__box--tittle">Gdzie odbędzie się ceremonia zaślubin?</h3>
+            <p class="info__box--text">Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/tracking.png">
-            <h3 class="tittle">Jak dojechać do sali?</h3>
-            <p class="text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" - bez trudu dojedziecie na miejsce :)</p>
+            <h3 class="info__box--tittle">Jak dojechać do sali?</h3>
+            <p class="info__box--text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" - bez trudu dojedziecie na miejsce :)</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/parking.png">
-            <h3 class="tittle">Czy przy sali dostępny jest parking?</h3>
-            <p class="text">Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
+            <h3 class="info__box--tittle">Czy przy sali dostępny jest parking?</h3>
+            <p class="info__box--text">Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/rainy.png">
-            <h3 class="tittle">Co jeżeli będzie padać?</h3>
-            <p class="text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz restauracji - bez względu na pogodę.</p>
+            <h3 class="info__box--tittle">Co jeżeli będzie padać?</h3>
+            <p class="info__box--text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz restauracji - bez względu na pogodę.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/rocking-horse.png">
-            <h3 class="tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
-            <p class="text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż. Mamy nadzieję, że rozumiecie naszą decyzję.</p>
+            <h3 class="info__box--tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
+            <p class="info__box--text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż. Mamy nadzieję, że rozumiecie naszą decyzję.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/salad.png">
-            <h3 class="tittle">Co jeśli nie jem mięsa?</h3>
-            <p class="text">Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień, gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma możliwości ich zmiany.</p>
+            <h3 class="info__box--tittle">Co jeśli nie jem mięsa?</h3>
+            <p class="info__box--text">Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień, gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma możliwości ich zmiany.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/taxi.png">
-            <h3 class="tittle">Jak po weselu wrócić do domu/hotelu?</h3>
-            <p class="text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi (tel. 55 233 24 44). Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
+            <h3 class="info__box--tittle">Jak po weselu wrócić do domu/hotelu?</h3>
+            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi <a href="tel:+552332444">(tel. 55 233 24 44)</a>. Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
           </li>
         </ol>
       </div>
@@ -124,23 +124,23 @@
     <div class="wrapper">
       <div class="contact__box">
         <h2 class="section-heading">kontakt</h2>
-        <p class="text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
+        <p class="contact__box--text">W razie potrzeby prosimy kontaktować się z poniższymi osobami. </p>
         <ol>
           <li>
-            <h3 class="tittle">Aleksandra <a href="#"><img class="contact__box--icons"
+            <h3 class="contact__box--tittle">Aleksandra <a href="#"><img class="contact__box--icons"
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <li>
-            <h3 class="tittle">Patryk <a href="#"><img class="contact__box--icons"
+            <h3 class="contact__box--tittle">Patryk <a href="#"><img class="contact__box--icons"
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <li>
-            <h3 class="tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img class="contact__box--icons"
+            <h3 class="contact__box--tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img class="contact__box--icons"
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
             <!-- Klaudia Lewandowska - świadkowa-  w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
-            <h3 class="tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img class="contact__box--icons"
+            <h3 class="contact__box--tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img class="contact__box--icons"
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
         </ol>
@@ -163,7 +163,7 @@
     <div class="wrapper">
       <h2 class="section-heading">plan wesela</h2>
       <div class="plan__box">
-        <p class="text">w tym miejscu będzie plan wesela :)</p>
+        <p class="plan__box--text">w tym miejscu będzie plan wesela :)</p>
       </div>
     </div>
   </section>
@@ -172,7 +172,7 @@
     <div class="wrapper">
       <h2 class="section-heading">menu weselne</h2>
       <div class="menu__box">
-        <p class="text">w tym miejscu będzie menu weselne :)</p>
+        <p class="menu__box--text">w tym miejscu będzie menu weselne :)</p>
       </div>
     </div>
   </section>
@@ -181,7 +181,7 @@
     <div class="wrapper">
       <h2 class="section-heading">zdjęcia</h2>
       <div class="photos__box">
-        <p class="text">w tym miejscu będą zdjęcia :)</p>
+        <p class="photos__box--text">w tym miejscu będą zdjęcia :)</p>
       </div>
     </div>
 
