--- a/index.html
+++ b/index.html
@@ -82,37 +82,50 @@
           <li>
             <img class="info__box--icons" src="./img/icons/federal-palace-of-switzerland.png">
             <h3 class="info__box--tittle">Gdzie odbędzie się ceremonia zaślubin?</h3>
-            <p class="info__box--text">Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy Elbląga.</p>
+            <p class="info__box--text">Ceremonia odbędzie się w ogrodzie sali weselnej Nowa Holandia przy obwodnicy
+              Elbląga.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/tracking.png">
             <h3 class="info__box--tittle">Jak dojechać do sali?</h3>
-            <p class="info__box--text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google wpiszcie "Nowa Holandia" - bez trudu dojedziecie na miejsce :)</p>
+            <p class="info__box--text">Obwodnicą Elbląga, zjazd z S7 przy stacji benzynowej SHELL. W mapach Google
+              wpiszcie "Nowa Holandia" - bez trudu dojedziecie na miejsce :)</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/parking.png">
             <h3 class="info__box--tittle">Czy przy sali dostępny jest parking?</h3>
-            <p class="info__box--text">Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking samochodowy.</p>
+            <p class="info__box--text">Tak - bezpośrednio przed głównym wejściem do sali znajduje się bezpłatny parking
+              samochodowy.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/rainy.png">
             <h3 class="info__box--tittle">Co jeżeli będzie padać?</h3>
-            <p class="info__box--text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B i w razie potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest wewnątrz restauracji - bez względu na pogodę.</p>
+            <p class="info__box--text">Mamy nadzieję, że nie będzie! Na wszelki wypadek mamy jednak przewidziany plan B
+              i w razie potrzeby ceremonia zostanie przeniesiona pod zadaszenie przy sali. Samo wesele zaplanowane jest
+              wewnątrz restauracji - bez względu na pogodę.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/rocking-horse.png">
             <h3 class="info__box--tittle">Na zaproszeniu nie wymieniono moich dzieci, czy to pomyłka?</h3>
-            <p class="info__box--text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny alkohol i późną porę) nie będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie nam osoby powyżej 16 r.ż. Mamy nadzieję, że rozumiecie naszą decyzję.</p>
+            <p class="info__box--text">Nie. Wspólnie zadecydowaliśmy, że z uwagi na charakter imprezy (wszechobecny
+              alkohol i późną porę) nie będzie to odpowiednie miejsce dla dzieci. Dlatego zaprosiliśmy wyłącznie bliskie
+              nam osoby powyżej 16 r.ż. Mamy nadzieję, że rozumiecie naszą decyzję.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/salad.png">
             <h3 class="info__box--tittle">Co jeśli nie jem mięsa?</h3>
-            <p class="info__box--text">Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o swoich preferencjach przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która weźmie pod uwagę waszą dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące wegetarianizm na co dzień, gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą ślubu i po tym czasie nie ma możliwości ich zmiany.</p>
+            <p class="info__box--text">Żaden problem - jeśli jesteście wegetarianami to prosimy abyście dali nam znać o
+              swoich preferencjach przy potwierdzaniu obecności. Informacje zostaną przekazane do restauracji, która
+              weźmie pod uwagę waszą dietę. Prosimy jednak, by z tej opcji korzystały wyłącznie osoby praktykujące
+              wegetarianizm na co dzień, gdyż serwowane posiłki są ustalane z salą na około dwa miesiące przed datą
+              ślubu i po tym czasie nie ma możliwości ich zmiany.</p>
           </li>
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/taxi.png">
             <h3 class="info__box--tittle">Jak po weselu wrócić do domu/hotelu?</h3>
-            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi <a href="tel:+552332444">(tel. 55 233 24 44)</a>. Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
+            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi <a href="tel:+552332444">(tel.
+                55 233 24 44)</a>. Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy
+              pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
           </li>
         </ol>
       </div>
@@ -135,13 +148,13 @@
                   src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
           <li>
-            <h3 class="contact__box--tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img class="contact__box--icons"
-                  src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <h3 class="contact__box--tittle">Klaudia Ciepłucha - świadkowa Oli<a href="#"><img
+                  class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
             <!-- Klaudia Lewandowska - świadkowa-  w marcu będę musiał podmienić nazwisko xD to sobie juz placeholdera zrobiłem ;)  -->
           </li>
           <li>
-            <h3 class="contact__box--tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img class="contact__box--icons"
-                  src="./img/icons/messager-removebg-preview.png"></a></h3>
+            <h3 class="contact__box--tittle">Mariusz Wiśniewski - świadek Patryka<a href="#"><img
+                  class="contact__box--icons" src="./img/icons/messager-removebg-preview.png"></a></h3>
           </li>
         </ol>
       </div>
@@ -156,6 +169,8 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2337.4599381008347!2d19.414231016137602!3d54.136497880152234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd4ce288cd6139%3A0xb16e7886925213f1!2sNowa%20Holandia!5e0!3m2!1sen!2spl!4v1665783352748!5m2!1sen!2spl"
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
+      <a class="map__box--link" href="http://goo.gl/maps/yRUXBrEp2EXMCKrd6" target="_blank"
+        rel="noopener noreferrer">LINK DO MAPY</a>
     </div>
   </section>
 
