change link for map

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2337.4599381008347!2d19.414231016137602!3d54.136497880152234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd4ce288cd6139%3A0xb16e7886925213f1!2sNowa%20Holandia!5e0!3m2!1sen!2spl!4v1665783352748!5m2!1sen!2spl"
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <a class="map__box--link" href="https://www.google.pl/maps/place/Nowa+Holandia+-+Grill+Bar+i+Restauracja"
+      <a class="map__box--link"
+        href="https://www.google.pl/maps/place/Nowa+Holandia+-+Grill+Bar+i+Restauracja/@54.1365943,19.413676,17z/data=!3m1!4b1!4m5!3m4!1s0x46fd4ce262338451:0xc011cd7b12c447be!8m2!3d54.1365912!4d19.41587"
         target="_blank" rel="noopener noreferrer">LINK DO MAPY</a>
     </div>
   </section>
