--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/taxi.png">
             <h3 class="info__box--tittle">Jak po weselu wrócić do domu/hotelu?</h3>
-            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi <a href="tel:+552332444">(tel.
-                55 233 24 44)</a>. Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy
+            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi <a href="tel:+552332444"><i
+                  class="fa-solid fa-phone info__box--animation"></i></a>(tel.
+              55 233 24 44). Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy
               pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
           </li>
         </ol>
@@ -169,7 +170,8 @@
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2337.4599381008347!2d19.414231016137602!3d54.136497880152234!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46fd4ce288cd6139%3A0xb16e7886925213f1!2sNowa%20Holandia!5e0!3m2!1sen!2spl!4v1665783352748!5m2!1sen!2spl"
           allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-      <a class="map__box--link" href="https://www.google.com/maps/search/?api=1&query=Nowa+Holandia+-+Grill+Bar+i+Restauracja" target="_blank"
+      <a class="map__box--link"
+        href="https://www.google.com/maps/search/?api=1&query=Nowa+Holandia+-+Grill+Bar+i+Restauracja" target="_blank"
         rel="noopener noreferrer">LINK DO MAPY</a>
     </div>
   </section>
