--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/taxi.png">
             <h3 class="info__box--tittle">Jak po weselu wrócić do domu/hotelu?</h3>
-            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi <a href="tel:+552332444"><i
+            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi <a href="tel:552332444"><i
                   class="fa-solid fa-phone info__box--animation"></i></a>(tel.
               55 233 24 44). Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy
               pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
