adding a map 3 hours before the wedding

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           </div>
         </div>
       </div>
+      <div class="addMap"></div>
+      <div class="addLink"><a class="map__box--link"
+        href="https://www.google.com/maps/search/?api=1&query=Nowa+Holandia+-+Grill+Bar+i+Restauracja" target="_blank"
+        rel="noopener noreferrer">LINK DO MAPY</a></div>
     </div>
   </header>
 
