--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         </div>
       </div>
       <div class="addMap"></div>
+    </div>
   </header>
 
   <button class="burger-btn">
@@ -123,9 +124,11 @@
           <li class="info__box--list">
             <img class="info__box--icons" src="./img/icons/taxi.png">
             <h3 class="info__box--tittle">Jak po weselu wrócić do domu/hotelu?</h3>
-            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi. Sala, w której odbędzie się wesele ma z nimi podpisaną umowę o niewłączaniu strefy
+            <p class="info__box--text">Najkorzystniej będzie zamówić taksówkę z TeleTaxi. Sala, w której odbędzie się
+              wesele ma z nimi podpisaną umowę o niewłączaniu strefy
               pozamiastowej, dzięki czemu cena za dojazd powinna być niższa niż u pozostałych firm taksówkarskich.</p>
-              <p class="info__box--text">TeleTaxi (tel. 55 233 24 44)<a href="tel:552332444"><i class="fa-solid fa-phone info__box--animation"></i></a></p>
+            <p class="info__box--text">TeleTaxi (tel. 55 233 24 44)<a href="tel:552332444"><i
+                  class="fa-solid fa-phone info__box--animation"></i></a></p>
           </li>
         </ol>
       </div>
