change elements after target date

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <div class="header__timer__body">
         <div class="time__section">
           <h3 class="time__section--title">za:</h3>
+          <h3 class="time__section--number"><p class="info__box--text">TeleTaxi (tel. 55 233 24 44)<a href="tel:552332444"><i
+            class="fa-solid fa-phone info__box--animation"></i></a></p></h3>
           <div class="time__section__cards">
             <div class="card">
               <p class="days number"></p>
